erDiagram
    CATEGORIES ||--o{ PRODUCTS : contains
    CUSTOMERS ||--o{ SALES_TRANSACTIONS : makes
    SALES_TRANSACTIONS ||--|{ SALES_ITEMS : contains
    PRODUCTS ||--o{ SALES_ITEMS : sold_as
    VOUCHERS ||--o{ VOUCHER_REDEMPTIONS : redeemed
    CUSTOMERS ||--o{ VOUCHER_REDEMPTIONS : uses
    SALES_TRANSACTIONS ||--o{ VOUCHER_REDEMPTIONS : applies_to
    SALES_TRANSACTIONS ||--o{ RETURNS : generates
    SALES_ITEMS ||--o{ RETURNS : returned
    CUSTOMERS ||--o{ RETURNS : requests
    PRODUCTS ||--o{ RETURNS : concerns

    CATEGORIES {
      INT category_id PK
      VARCHAR category_name UK
      VARCHAR description
    }
    PRODUCTS {
      INT product_id PK
      VARCHAR product_name
      INT category_id FK
      DECIMAL unit_price
      DECIMAL cost_price
      INT stock_quantity
      BOOLEAN is_active
    }
    CUSTOMERS {
      INT customer_id PK
      VARCHAR first_name
      VARCHAR last_name
      VARCHAR email UK
      VARCHAR phone
      VARCHAR city
      DATE registration_date
      VARCHAR loyalty_tier
    }
    SALES_TRANSACTIONS {
      BIGINT transaction_id PK
      INT customer_id FK
      INT store_id
      DATE transaction_date
      TIME transaction_time
      VARCHAR payment_method
      DECIMAL total_amount
      DECIMAL discount_amount
      DECIMAL tax_amount
      DECIMAL net_amount
    }
    SALES_ITEMS {
      BIGINT item_id PK
      BIGINT transaction_id FK
      INT product_id FK
      INT quantity
      DECIMAL unit_price
      DECIMAL line_total
    }
    VOUCHERS {
      INT voucher_id PK
      VARCHAR voucher_code UK
      VARCHAR voucher_type
      DECIMAL discount_value
      DECIMAL min_purchase_amount
      DECIMAL max_discount_amount
      DATE valid_from
      DATE valid_to
      BOOLEAN is_active
    }
    VOUCHER_REDEMPTIONS {
      BIGINT redemption_id PK
      INT voucher_id FK
      BIGINT transaction_id FK
      INT customer_id FK
      DATE redemption_date
      DECIMAL discount_applied
    }
    RETURNS {
      BIGINT return_id PK
      BIGINT transaction_id FK
      BIGINT item_id FK
      INT customer_id FK
      INT product_id FK
      DATE return_date
      INT return_quantity
      VARCHAR return_reason
      DECIMAL refund_amount
      VARCHAR refund_status
    }
